scss/sections/destinationSection/_destinationSection-tablet.scss
.destinationSection {
  // @include flexColCentered;
  width: 768px;

  .destinationText {
    display: flex;
    width: 1200px;
    line-height: 1.75rem;
    gap: 70px;
    letter-spacing: 4%;

    .leftText {
      width: 495px;
    }

    .rightText {
      width: 510px;
    }
  }

  .destinationCards {
    gap: 34px;
    margin: 50px 0 70px 0;

    .card {
      width: 368px;
      height: 512px;
      display: flex;
      flex-direction: column;
      text-align: center;
      border: 3px $colorBeachPeach solid;
      border-radius: 10px;
      overflow: hidden;

      img {
        width: 368px;
        height: 242px;
      }

      h3 {
        margin-bottom: 0;
        font-family: $fontRoboto;
        font-weight: 700;
      }

      p {
        width: 280px;
        height: 84px;
        margin: 10px auto 0 auto;
      }

      button {
        margin: 20px auto 0 auto;
        width: 175px;
        height: 55px;
        border-radius: 10px;
        color: white;
        font-family: $fontRoboto;
        font-size: 18px;
        font-weight: 700;
        background-color: $colorPrimaryColor;
      }
    }
  }
}

